    FIXED: [ 2543170 ] Crashes on mouse wheel in brief view
    FIXED: [ 2553396 ] Krusader exits after closing KrViewer
    FIXED: [ 2563664 ] Krusader always trashes (not deletes) files
    FIXED: tar.bz2 doesn't always detected automatically
    FIXED: panel freezes if the inactive path is invalid
    FIXED: problem when splitter sizes are 0, 0
    FIXED: iso protocol problems with images bigger than 4GByte
    FIXED: Windows: iso protocol works well now
    FIXED: Windows: slow start
    FIXED: Windows: the root directory is C:\
    FIXED: MountMan saves its last size
    FIXED: [ 1535954 ] krviewer hex view endian dependent
    FIXED: [ 1550740 ] Wrong placeholder replacement
    FIXED: [ 1988452 ] "Open the popup panel" button hides files from the file pane
    FIXED: [ 1965317 ] Return to panel when pressing Escape in kcmdline/panel path
    FIXED: [ 2265338 ] Copy from rar files broken
    FIXED: [ 2484665 ] Crash when deleting modified user action
    FIXED: MountMan: mount/umount/eject uses Solid if possible
    FIXED: [ 2381505 ] Ctrl+Shift+D in editor (KWrite) not work
    FIXED: Krusader fails to edit files containing international chars with Shift+F4

  CHANGED: Initial Konfigurator size is now 900x680
     
     I18N: Updated Catalan translation (thanks to Joaquim Perez)
     I18N: Updated Slovak translation (thanks to Zdenko Podobný and Ondrej Pačay "Yogi" )
     I18N: Updated Hungarian translation
     I18N: Updated Slovenian translation
     I18N: Updated Swedish translation (thanks Peter Landgren)


2.0.0-beta2 "Space Odyssey"
===========================

    ADDED: shortcuts: copy by queue (SHIFT+F5), move by queue (SHIFT+F6)
    ADDED: Krusader support for tar.lzma (KDE's tar protocol doesn't support it yet)
    ADDED: Possibility to choose one of five sorting methods (thanks to Jacek Jaworski)
    ADDED: compare by content for search / locate
    ADDED: New mouse selection mode