@@ -1,3 +1,5 @@
+    ADDED: [ 2466695 ] Archive dialog now remembers Compression level
+
     FIXED: [ 2543170 ] Crashes on mouse wheel in brief view
     FIXED: [ 2553396 ] Krusader exits after closing KrViewer
     FIXED: [ 2563664 ] Krusader always trashes (not deletes) files
